--- a/guide.html
+++ b/guide.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Guide Falegnameria e Ristrutturazioni Roma | Costi e Consigli | Legno & Casa Roma</title>
+    <title>Guide Falegnameria e Ristrutturazioni Roma | Costi e Consigli | Legno Romano</title>
     <meta name="description" content="Guide complete su costi falegnameria e ristrutturazioni a Roma. Quanto costa un mobile su misura, una cucina in legno, ristrutturare casa. Bonus 2026.">
     <meta name="keywords" content="quanto costa mobile su misura Roma, costo cucina legno Roma, costo falegnameria Roma, preventivo ristrutturazione Roma, bonus ristrutturazioni 2026">
-    <meta name="author" content="Legno & Casa Roma">
+    <meta name="author" content="Legno Romano">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://[NUOVO-DOMINIO]/guide.html">
+    <link rel="canonical" href="https://legnoromano.it/guide.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://[NUOVO-DOMINIO]/guide.html">
-    <meta property="og:title" content="Guide Falegnameria e Ristrutturazioni Roma | Legno & Casa Roma">
+    <meta property="og:url" content="https://legnoromano.it/guide.html">
+    <meta property="og:title" content="Guide Falegnameria e Ristrutturazioni Roma | Legno Romano">
     <meta property="og:description" content="Guide complete su costi falegnameria e ristrutturazioni a Roma. Bonus 2026 e preventivi gratuiti.">
-    <meta property="og:image" content="https://[NUOVO-DOMINIO]/images/og-image.jpg">
+    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
@@ -106,7 +106,7 @@
         <div class="nav-container">
             <a href="index.html" class="logo">
                 <span class="logo-icon"><i class="fas fa-hammer"></i></span>
-                <span class="logo-text">Legno & <span>Casa Roma</span></span>
+                <span class="logo-text">Legno <span>Romano</span></span>
             </a>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
@@ -266,7 +266,7 @@
                     <div class="footer-brand">
                         <a href="index.html" class="logo">
                             <span class="logo-icon"><i class="fas fa-hammer"></i></span>
-                            <span class="logo-text">Legno & <span>Casa Roma</span></span>
+                            <span class="logo-text">Legno <span>Romano</span></span>
                         </a>
                         <p>Artigiani del legno dal 2008. Qualità, affidabilità e passione artigianale al servizio del tuo progetto.</p>
                     </div>
@@ -301,7 +301,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2026 Legno & Casa Roma. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
+                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
             </div>
         </div>
     </footer>
