--- a/servizi/pergole-gazebo.html
+++ b/servizi/pergole-gazebo.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Pergole e Gazebo in Legno Roma | Legno & Casa Roma - Strutture Esterne Artigianali</title>
+    <title>Pergole e Gazebo in Legno Roma | Legno Romano - Strutture Esterne Artigianali</title>
     <meta name="description" content="Pergole e gazebo in legno su misura a Roma. Realizziamo strutture esterne artigianali in legno massello per giardini, terrazzi e spazi esterni. Preventivo gratuito.">
     <meta name="keywords" content="pergole in legno Roma, gazebo in legno Roma, pergolati Roma, strutture esterne legno Roma, coperture giardino Roma, tettoie legno Roma">
-    <meta name="author" content="Legno & Casa Roma">
+    <meta name="author" content="Legno Romano">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://[NUOVO-DOMINIO]/servizi/pergole-gazebo.html">
+    <link rel="canonical" href="https://legnoromano.it/servizi/pergole-gazebo.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://[NUOVO-DOMINIO]/servizi/pergole-gazebo.html">
-    <meta property="og:title" content="Pergole e Gazebo in Legno Roma | Legno & Casa Roma">
+    <meta property="og:url" content="https://legnoromano.it/servizi/pergole-gazebo.html">
+    <meta property="og:title" content="Pergole e Gazebo in Legno Roma | Legno Romano">
     <meta property="og:description" content="Pergole e gazebo artigianali in legno massello a Roma. Progettazione personalizzata e installazione completa.">
-    <meta property="og:image" content="https://[NUOVO-DOMINIO]/images/og-image.jpg">
+    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
@@ -55,7 +55,7 @@
         "name": "Pergole e Gazebo in Legno",
         "provider": {
             "@type": "HomeAndConstructionBusiness",
-            "name": "Legno & Casa Roma",
+            "name": "Legno Romano",
             "telephone": "+39 328 057 2349",
             "email": "lozanazar84@gmail.com"
         },
@@ -70,7 +70,7 @@
         <div class="nav-container">
             <a href="../index.html" class="logo">
                 <span class="logo-icon"><i class="fas fa-hammer"></i></span>
-                <span class="logo-text">Legno & <span>Casa Roma</span></span>
+                <span class="logo-text">Legno <span>Romano</span></span>
             </a>
             <ul class="nav-menu">
                 <li><a href="../index.html" class="nav-link">Home</a></li>
@@ -120,7 +120,7 @@
                 </div>
                 <div style="display: flex; flex-wrap: wrap; gap: 40px; align-items: center; margin-top: 40px;">
                     <div class="intro-content" style="flex: 1; min-width: 300px;" data-aos="fade-up">
-                        <p style="font-size: 18px; line-height: 1.8; color: var(--gray-700); margin-bottom: 20px;">Le pergole e i gazebo in legno trasformano il tuo giardino o terrazzo in un ambiente accogliente e funzionale. Legno & Casa Roma realizza strutture esterne su misura in legno massello, perfette per creare zone ombra, aree relax o spazi per pranzi all'aperto.</p>
+                        <p style="font-size: 18px; line-height: 1.8; color: var(--gray-700); margin-bottom: 20px;">Le pergole e i gazebo in legno trasformano il tuo giardino o terrazzo in un ambiente accogliente e funzionale. Legno Romano realizza strutture esterne su misura in legno massello, perfette per creare zone ombra, aree relax o spazi per pranzi all'aperto.</p>
                         <p style="font-size: 18px; line-height: 1.8; color: var(--gray-700);">Utilizziamo legni resistenti agli agenti atmosferici come pino impregnato, larice e castagno, trattati per garantire durabilita e bellezza nel tempo.</p>
                     </div>
                     <div style="flex: 0 0 auto; max-width: 300px; margin: 0 auto;" data-aos="fade-up" data-aos-delay="100">
@@ -287,7 +287,7 @@
     <footer class="footer">
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2026 Legno & Casa Roma. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
+                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
                 <p style="font-size: 0.85em; margin-top: 8px; opacity: 0.9;">Lavori eseguiti secondo normativa vigente, con personale qualificato e assicurato.</p>
                 <p style="margin-top: 15px;">
                     <a href="https://www.iubenda.com/privacy-policy/14816223" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe" title="Privacy Policy">Privacy Policy</a>
