--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <!-- SEO Meta Tags  -->
     <title>Falegnameria e Ristrutturazioni Roma | Legno Romano - Mobili su Misura, Pergole, Scale</title>
-    <meta name="description" content="Falegnameria artigianale a Roma. Legno Romano realizza letti, scale, pergole, gazebo e mobili su misura. Ristrutturazioni, decorazioni pareti e pittura. Preventivi gratuiti.">
-    <meta name="keywords" content="falegnameria Roma, mobili su misura Roma, pergole in legno Roma, gazebo Roma, scale in legno Roma, letti artigianali Roma, ristrutturazioni Roma, decorazioni pareti Roma, pittura Roma, carpenteria Roma, mobili artigianali Roma, falegname Roma, costruzioni Roma">
+    <meta name="description" content="Falegnameria artigianale a Roma. Legno Romano realizza cucine, letti, scale, pergole, gazebo e mobili su misura. Ristrutturazioni, decorazioni pareti e pittura. Preventivi gratuiti.">
+    <meta name="keywords" content="falegnameria Roma, cucine su misura Roma, mobili su misura Roma, pergole in legno Roma, gazebo Roma, scale in legno Roma, letti artigianali Roma, ristrutturazioni Roma, decorazioni pareti Roma, pittura Roma, carpenteria Roma, mobili artigianali Roma, falegname Roma, costruzioni Roma">
     <meta name="author" content="Legno Romano">
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-RM">
@@ -76,7 +76,7 @@
         "@context": "https://schema.org",
         "@type": "HomeAndConstructionBusiness",
         "name": "Legno Romano",
-        "description": "Falegnameria artigianale e ristrutturazioni a Roma. Realizziamo mobili su misura, scale, letti in legno. Servizi di pittura e decorazioni pareti.",
+        "description": "Falegnameria artigianale e ristrutturazioni a Roma. Realizziamo cucine, mobili su misura, scale, letti in legno. Servizi di pittura e decorazioni pareti.",
         "url": "https://legnoromano.it",
         "telephone": "+39 328 057 2349",
         "email": "lozanazar84@gmail.com",
@@ -353,7 +353,7 @@
         <div class="hero-overlay"></div>
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
             <h1>Falegnameria e Ristrutturazioni <br><span class="gradient-text">Roma e Provincia</span></h1>
-            <p class="hero-description">Legno Romano realizza mobili su misura, scale e letti artigianali in legno. Offriamo anche servizi di ristrutturazione, decorazioni pareti e pittura. Sopralluogo gratuito.</p>
+            <p class="hero-description">Legno Romano realizza cucine, mobili su misura, scale e letti artigianali in legno. Offriamo anche servizi di ristrutturazione, decorazioni pareti e pittura. Sopralluogo gratuito.</p>
             <div class="hero-buttons">
                 <a href="#contatti" class="btn btn-primary">
                     <span>Sopralluogo Gratuito</span>
@@ -1199,6 +1199,10 @@
                             <li>
                                 <i class="fas fa-phone-alt"></i>
                                 <a href="tel:+39 328 057 2349">+39 328 057 2349</a>
+                            </li>
+                            <li>
+                                <i class="fas fa-phone-alt"></i>
+                                <a href="tel:+39 389 260 5634">+39 389 260 5634</a>
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
