migiorato il siti

--- a/falegnameria-ristrutturazioni-roma.html
+++ b/falegnameria-ristrutturazioni-roma.html
@@ -12,14 +12,14 @@
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-RM">
     <meta name="geo.placename" content="Roma">
-    <link rel="canonical" href="https://legnoromano.it/falegnameria-ristrutturazioni-roma.html">
+    <link rel="canonical" href="https://falegnameriaroma.netlify.app/falegnameria-ristrutturazioni-roma.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://legnoromano.it/falegnameria-ristrutturazioni-roma.html">
+    <meta property="og:url" content="https://falegnameriaroma.netlify.app/falegnameria-ristrutturazioni-roma.html">
     <meta property="og:title" content="Falegnameria e Ristrutturazioni Roma | Legno Romano">
     <meta property="og:description" content="Falegnameria e ristrutturazioni a Roma. Mobili su misura, pergole, gazebo, scale, pittura e lavori edili. Sopralluogo gratuito.">
-    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
+    <meta property="og:image" content="https://falegnameriaroma.netlify.app/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
@@ -56,7 +56,7 @@
         "@type": "HomeAndConstructionBusiness",
         "name": "Legno Romano",
         "description": "Falegnameria artigianale e ristrutturazioni a Roma e provincia. Mobili su misura, pergole, gazebo, scale, pittura e lavori edili.",
-        "url": "https://legnoromano.it/falegnameria-ristrutturazioni-roma.html",
+        "url": "https://falegnameriaroma.netlify.app/falegnameria-ristrutturazioni-roma.html",
         "telephone": "+39 328 057 2349",
         "email": "lozanazar84@gmail.com",
         "address": {
@@ -154,12 +154,12 @@
                         <p style="color: var(--gray-600); margin-bottom: 15px;">Strutture esterne in legno per giardini e terrazzi.</p>
                         <span style="color: var(--primary); font-weight: 600;">Scopri di più <i class="fas fa-arrow-right"></i></span>
                     </a>
-                    <a href="servizi/pittura-decorazioni.html" class="service-card-link" data-aos="fade-up" data-aos-delay="200" style="text-decoration: none; background: white; border-radius: 12px; padding: 30px; text-align: center; transition: transform 0.3s, box-shadow 0.3s;">
+                    <a href="servizi/corrimano-scale.html" class="service-card-link" data-aos="fade-up" data-aos-delay="200" style="text-decoration: none; background: white; border-radius: 12px; padding: 30px; text-align: center; transition: transform 0.3s, box-shadow 0.3s;">
                         <div style="width: 70px; height: 70px; background: var(--primary); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
-                            <i class="fas fa-paint-roller" style="color: white; font-size: 28px;"></i>
+                            <i class="fas fa-stairs" style="color: white; font-size: 28px;"></i>
                         </div>
-                        <h3 style="color: var(--dark); margin-bottom: 10px;">Decorazioni e Pittura</h3>
-                        <p style="color: var(--gray-600); margin-bottom: 15px;">Boiserie in legno, rivestimenti pareti e pittura decorativa.</p>
+                        <h3 style="color: var(--dark); margin-bottom: 10px;">Corrimano e Scale</h3>
+                        <p style="color: var(--gray-600); margin-bottom: 15px;">Scale e corrimano artigianali in legno massello su misura.</p>
                         <span style="color: var(--primary); font-weight: 600;">Scopri di più <i class="fas fa-arrow-right"></i></span>
                     </a>
                     <a href="servizi/costruzioni-ristrutturazioni.html" class="service-card-link" data-aos="fade-up" data-aos-delay="300" style="text-decoration: none; background: white; border-radius: 12px; padding: 30px; text-align: center; transition: transform 0.3s, box-shadow 0.3s;">
