--- a/guide.html
+++ b/guide.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="quanto costa mobile su misura Roma, costo cucina legno Roma, costo falegnameria Roma, preventivo ristrutturazione Roma, bonus ristrutturazioni 2026">
     <meta name="author" content="Legno Romano">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://legnoromano.it/guide.html">
+    <link rel="canonical" href="https://falegnameriaroma.netlify.app/guide.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://legnoromano.it/guide.html">
+    <meta property="og:url" content="https://falegnameriaroma.netlify.app/guide.html">
     <meta property="og:title" content="Guide Falegnameria e Ristrutturazioni Roma | Legno Romano">
     <meta property="og:description" content="Guide complete su costi falegnameria e ristrutturazioni a Roma. Bonus 2026 e preventivi gratuiti.">
-    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
+    <meta property="og:image" content="https://falegnameriaroma.netlify.app/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
