--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-RM">
     <meta name="geo.placename" content="Roma">
-    <link rel="canonical" href="https://legnoromano.it/">
+    <link rel="canonical" href="https://falegnameriaroma.netlify.app/">
 
     <!-- Sitemap -->
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
@@ -21,10 +21,10 @@
     <script type="text/javascript" src="https://embeds.iubenda.com/widgets/9ad80b30-e9c6-4477-b1f3-4285f80841c4.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://legnoromano.it/">
+    <meta property="og:url" content="https://falegnameriaroma.netlify.app/">
     <meta property="og:title" content="Falegnameria e Ristrutturazioni Roma | Legno Romano">
     <meta property="og:description" content="Falegnameria artigianale a Roma. Mobili su misura, scale e letti in legno. Ristrutturazioni e pittura. Preventivi gratuiti.">
-    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
+    <meta property="og:image" content="https://falegnameriaroma.netlify.app/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
     <meta property="og:site_name" content="Legno Romano">
 
@@ -32,7 +32,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Falegnameria e Ristrutturazioni Roma | Legno Romano">
     <meta name="twitter:description" content="Falegnameria artigianale a Roma. Mobili su misura, scale e letti. Preventivi gratuiti.">
-    <meta name="twitter:image" content="https://legnoromano.it/images/og-image.jpg">
+    <meta name="twitter:image" content="https://falegnameriaroma.netlify.app/images/og-image.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
@@ -77,7 +77,7 @@
         "@type": "HomeAndConstructionBusiness",
         "name": "Legno Romano",
         "description": "Falegnameria artigianale e ristrutturazioni a Roma. Realizziamo cucine, mobili su misura, scale, letti in legno. Servizi di pittura e decorazioni pareti.",
-        "url": "https://legnoromano.it",
+        "url": "https://falegnameriaroma.netlify.app",
         "telephone": "+39 328 057 2349",
         "email": "lozanazar84@gmail.com",
         "address": {
@@ -183,8 +183,8 @@
             "https://www.facebook.com/legnoecasaroma",
             "https://www.instagram.com/legnoecasaroma"
         ],
-        "image": "https://legnoromano.it/images/og-image.jpg",
-        "logo": "https://legnoromano.it/favicon.svg"
+        "image": "https://falegnameriaroma.netlify.app/images/og-image.jpg",
+        "logo": "https://falegnameriaroma.netlify.app/favicon.svg"
     }
     </script>
 
@@ -233,7 +233,7 @@
                     "@type": "Offer",
                     "itemOffered": {
                         "@type": "Service",
-                        "name": "Decorazioni Pareti e Pittura Roma"
+                        "name": "Corrimano e Scale in Legno Roma"
                     }
                 }
             ]
@@ -247,10 +247,10 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Legno Romano",
-        "url": "https://legnoromano.it/",
+        "url": "https://falegnameriaroma.netlify.app/",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://legnoromano.it/?s={search_term_string}",
+            "target": "https://falegnameriaroma.netlify.app/?s={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
@@ -264,37 +264,37 @@
             {
                 "@type": "SiteNavigationElement",
                 "name": "Home",
-                "url": "https://legnoromano.it/#home"
+                "url": "https://falegnameriaroma.netlify.app/#home"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Chi Siamo",
-                "url": "https://legnoromano.it/#chi-siamo"
+                "url": "https://falegnameriaroma.netlify.app/#chi-siamo"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Servizi",
-                "url": "https://legnoromano.it/#servizi"
+                "url": "https://falegnameriaroma.netlify.app/#servizi"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Perché Noi",
-                "url": "https://legnoromano.it/#perche-noi"
+                "url": "https://falegnameriaroma.netlify.app/#perche-noi"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Recensioni",
-                "url": "https://legnoromano.it/#recensioni"
+                "url": "https://falegnameriaroma.netlify.app/#recensioni"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Guide",
-                "url": "https://legnoromano.it/guide.html"
+                "url": "https://falegnameriaroma.netlify.app/guide.html"
             },
             {
                 "@type": "SiteNavigationElement",
                 "name": "Contatti",
-                "url": "https://legnoromano.it/#contatti"
+                "url": "https://falegnameriaroma.netlify.app/#contatti"
             }
         ]
     }
@@ -495,24 +495,24 @@
                     </div>
                 </div>
 
-                <!-- Servizio 3: Decorazioni Pareti e Pittura -->
+                <!-- Servizio 3: Corrimano e Scale -->
                 <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="service-image">
-                        <img src="images/work/17.webp" alt="Decorazioni pareti e pittura Roma" width="600" height="400" loading="lazy">
+                        <img src="images/work/corrimano/corrimano-scale-legno-1.webp" alt="Corrimano e scale in legno Roma" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
-                            <a href="servizi/pittura-decorazioni.html" class="service-btn">Scopri di più</a>
+                            <a href="servizi/corrimano-scale.html" class="service-btn">Scopri di più</a>
                         </div>
                     </div>
                     <div class="service-content">
                         <div class="service-icon">
-                            <i class="fas fa-paint-roller"></i>
+                            <i class="fas fa-stairs"></i>
                         </div>
-                        <h3>Decorazioni Pareti e Pittura</h3>
-                        <p>Servizi di pittura interni ed esterni, boiserie in legno, rivestimenti pareti e decorazioni d'interni. Trasformiamo le tue pareti in opere d'arte.</p>
+                        <h3>Corrimano e Scale</h3>
+                        <p>Realizziamo corrimano e scale artigianali in legno massello su misura. Ogni progetto e unico, creato con passione e maestria per valorizzare la tua casa.</p>
                         <ul class="service-features">
-                            <li><i class="fas fa-check"></i> Boiserie e pannelli in legno</li>
-                            <li><i class="fas fa-check"></i> Pittura decorativa</li>
-                            <li><i class="fas fa-check"></i> Rivestimenti pareti</li>
+                            <li><i class="fas fa-check"></i> Scale su misura</li>
+                            <li><i class="fas fa-check"></i> Corrimano artigianali</li>
+                            <li><i class="fas fa-check"></i> Ringhiere e balaustre</li>
                         </ul>
                     </div>
                 </div>
@@ -520,7 +520,7 @@
                 <!-- Servizio 4: Costruzioni e Ristrutturazioni -->
                 <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="service-image">
-                        <img src="images/work/14.webp" alt="Costruzioni e ristrutturazioni Roma" width="600" height="400" loading="lazy">
+                        <img src="images/work/Giovane-pittura-facciata-costruttore-operaio-con-rullo-a-lavori-di-isolamento-termico.webp" alt="Costruzioni e ristrutturazioni Roma" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
                             <a href="servizi/costruzioni-ristrutturazioni.html" class="service-btn">Scopri di più</a>
                         </div>
@@ -529,12 +529,12 @@
                         <div class="service-icon">
                             <i class="fas fa-building"></i>
                         </div>
-                        <h3>Costruzioni e Ristrutturazioni</h3>
-                        <p>Ristrutturazioni complete di appartamenti, villette e locali commerciali. Lavori edili, muratura, impianti e finiture di alta qualità.</p>
+                        <h3>Pittura e Ristrutturazioni</h3>
+                        <p>Ristrutturazioni di appartamenti, villette e locali commerciali. Lavori edili, muratura, finiture di alta qualità.</p>
                         <ul class="service-features">
                             <li><i class="fas fa-check"></i> Ristrutturazioni chiavi in mano</li>
                             <li><i class="fas fa-check"></i> Lavori edili e muratura</li>
-                            <li><i class="fas fa-check"></i> Impianti e finiture</li>
+                            <li><i class="fas fa-check"></i> Pittura e finiture</li>
                         </ul>
                     </div>
                 </div>
@@ -1130,8 +1130,7 @@
                                 <option value="scala">Scala in Legno</option>
                                 <option value="letto">Letto Artigianale</option>
                                 <option value="mobili">Mobili su Misura</option>
-                                <option value="decorazioni">Decorazioni Pareti</option>
-                                <option value="pittura">Pittura</option>
+                                <option value="corrimano">Corrimano e Scale</option>
                                 <option value="ristrutturazione">Ristrutturazione</option>
                                 <option value="altro">Altro</option>
                             </select>
