--- a/servizi/falegnameria-su-misura.html
+++ b/servizi/falegnameria-su-misura.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="falegnameria Roma, mobili su misura Roma, letti in legno Roma, scale in legno Roma, librerie su misura Roma, armadi in legno Roma, falegname Roma, mobili artigianali Roma">
     <meta name="author" content="Legno Romano">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://legnoromano.it/servizi/falegnameria-su-misura.html">
+    <link rel="canonical" href="https://falegnameriaroma.netlify.app/servizi/falegnameria-su-misura.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://legnoromano.it/servizi/falegnameria-su-misura.html">
+    <meta property="og:url" content="https://falegnameriaroma.netlify.app/servizi/falegnameria-su-misura.html">
     <meta property="og:title" content="Falegnameria su Misura Roma | Legno Romano">
     <meta property="og:description" content="Falegnameria artigianale su misura a Roma. Letti, scale, librerie, armadi e mobili in legno massello. Design personalizzato.">
-    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
+    <meta property="og:image" content="https://falegnameriaroma.netlify.app/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
