--- a/servizi/pergole-gazebo.html
+++ b/servizi/pergole-gazebo.html
@@ -10,14 +10,14 @@
     <meta name="keywords" content="pergole in legno Roma, gazebo in legno Roma, pergolati Roma, strutture esterne legno Roma, coperture giardino Roma, tettoie legno Roma">
     <meta name="author" content="Legno Romano">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://legnoromano.it/servizi/pergole-gazebo.html">
+    <link rel="canonical" href="https://falegnameriaroma.netlify.app/servizi/pergole-gazebo.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://legnoromano.it/servizi/pergole-gazebo.html">
+    <meta property="og:url" content="https://falegnameriaroma.netlify.app/servizi/pergole-gazebo.html">
     <meta property="og:title" content="Pergole e Gazebo in Legno Roma | Legno Romano">
     <meta property="og:description" content="Pergole e gazebo artigianali in legno massello a Roma. Progettazione personalizzata e installazione completa.">
-    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
+    <meta property="og:image" content="https://falegnameriaroma.netlify.app/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
