--- a/servizi/costruzioni-ristrutturazioni.html
+++ b/servizi/costruzioni-ristrutturazioni.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Costruzioni e Ristrutturazioni Roma | Legno Romano - Impresa Edile</title>
+    <title>Pittura e Ristrutturazioni Roma | Legno Romano - Impresa Edile</title>
     <meta name="description" content="Costruzioni e ristrutturazioni a Roma. Impresa edile per ristrutturazioni complete di appartamenti, villette e locali commerciali. Chiavi in mano con garanzia.">
     <meta name="keywords" content="ristrutturazioni Roma, costruzioni Roma, impresa edile Roma, ristrutturazione appartamenti Roma, ristrutturazione chiavi in mano Roma, lavori edili Roma">
     <meta name="author" content="Legno Romano">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://legnoromano.it/servizi/costruzioni-ristrutturazioni.html">
+    <link rel="canonical" href="https://falegnameriaroma.netlify.app/servizi/costruzioni-ristrutturazioni.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://legnoromano.it/servizi/costruzioni-ristrutturazioni.html">
+    <meta property="og:url" content="https://falegnameriaroma.netlify.app/servizi/costruzioni-ristrutturazioni.html">
     <meta property="og:title" content="Costruzioni e Ristrutturazioni Roma | Legno Romano">
     <meta property="og:description" content="Impresa edile per ristrutturazioni complete a Roma. Appartamenti, villette e locali commerciali. Chiavi in mano.">
-    <meta property="og:image" content="https://legnoromano.it/images/og-image.jpg">
+    <meta property="og:image" content="https://falegnameriaroma.netlify.app/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
     <!-- Favicon -->
@@ -136,14 +136,7 @@
                         <i class="fas fa-check-circle" style="color: var(--primary); font-size: 24px;"></i>
                         <span style="font-size: 17px; color: var(--dark);">Progettazione e consulenza tecnica</span>
                     </div>
-                    <div class="feature-item" data-aos="fade-up" data-aos-delay="50" style="display: flex; align-items: center; gap: 15px; background: white; padding: 25px; border-radius: 12px;">
-                        <i class="fas fa-check-circle" style="color: var(--primary); font-size: 24px;"></i>
-                        <span style="font-size: 17px; color: var(--dark);">Demolizioni e smaltimenti</span>
-                    </div>
-                    <div class="feature-item" data-aos="fade-up" data-aos-delay="100" style="display: flex; align-items: center; gap: 15px; background: white; padding: 25px; border-radius: 12px;">
-                        <i class="fas fa-check-circle" style="color: var(--primary); font-size: 24px;"></i>
-                        <span style="font-size: 17px; color: var(--dark);">Rifacimento impianti elettrici e idraulici</span>
-                    </div>
+                   
                     <div class="feature-item" data-aos="fade-up" data-aos-delay="150" style="display: flex; align-items: center; gap: 15px; background: white; padding: 25px; border-radius: 12px;">
                         <i class="fas fa-check-circle" style="color: var(--primary); font-size: 24px;"></i>
                         <span style="font-size: 17px; color: var(--dark);">Murature, cartongessi e massetti</span>
