--- a/falegnameria-ristrutturazioni-roma.html
+++ b/falegnameria-ristrutturazioni-roma.html
@@ -58,7 +58,7 @@
         "description": "Falegnameria artigianale e ristrutturazioni a Roma e provincia. Mobili su misura, pergole, gazebo, scale, pittura e lavori edili.",
         "url": "https://falegnameriaroma.netlify.app/falegnameria-ristrutturazioni-roma.html",
         "telephone": "+39 328 057 2349",
-        "email": "lozanazar84@gmail.com",
+        "email": "Lozaoleg63@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Roma",
@@ -270,7 +270,7 @@
     <footer class="footer">
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
+                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: 17996051003</p>
                 <p style="font-size: 0.85em; margin-top: 8px; opacity: 0.9;">Lavori eseguiti secondo normativa vigente, con personale qualificato e assicurato.</p>
                 <p style="margin-top: 15px;">
                     <a href="https://www.iubenda.com/privacy-policy/14816223" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe" title="Privacy Policy">Privacy Policy</a>
