--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         "description": "Falegnameria artigianale e ristrutturazioni a Roma. Realizziamo cucine, mobili su misura, scale, letti in legno. Servizi di pittura e decorazioni pareti.",
         "url": "https://falegnameriaroma.netlify.app",
         "telephone": "+39 328 057 2349",
-        "email": "lozanazar84@gmail.com",
+        "email": "Lozaoleg63@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "[INDIRIZZO]",
@@ -1074,7 +1074,7 @@
                             </div>
                             <div class="contact-text">
                                 <h4>Email</h4>
-                                <a href="mailto:lozanazar84@gmail.com">lozanazar84@gmail.com</a>
+                                <a href="mailto:Lozaoleg63@gmail.com">Lozaoleg63@gmail.com</a>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -1205,7 +1205,7 @@
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:lozanazar84@gmail.com">lozanazar84@gmail.com</a>
+                                <a href="mailto:Lozaoleg63@gmail.com">Lozaoleg63@gmail.com</a>
                             </li>
                             <li>
                                 <i class="fas fa-map-marker-alt"></i>
@@ -1223,7 +1223,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
+                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: 17996051003</p>
                 <p style="font-size: 0.85em; margin-top: 8px; opacity: 0.9;">Lavori eseguiti secondo normativa vigente, con personale qualificato e assicurato.</p>
             </div>
         </div>
