--- a/guide.html
+++ b/guide.html
@@ -288,7 +288,7 @@
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:lozanazar84@gmail.com">lozanazar84@gmail.com</a>
+                                <a href="mailto:Lozaoleg63@gmail.com">Lozaoleg63@gmail.com</a>
                             </li>
                             <li>
                                 <i class="fas fa-map-marker-alt"></i>
@@ -301,7 +301,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
+                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: 17996051003</p>
             </div>
         </div>
     </footer>
