--- a/servizi/falegnameria-su-misura.html
+++ b/servizi/falegnameria-su-misura.html
@@ -57,7 +57,7 @@
             "@type": "HomeAndConstructionBusiness",
             "name": "Legno Romano",
             "telephone": "+39 328 057 2349",
-            "email": "lozanazar84@gmail.com"
+            "email": "Lozaoleg63@gmail.com"
         },
         "areaServed": ["Roma", "Prati", "Trastevere", "EUR", "Parioli", "Fiumicino", "Ciampino"],
         "description": "Falegnameria artigianale su misura a Roma. Realizziamo letti, scale, librerie, armadi e mobili in legno massello con design personalizzato."
@@ -298,7 +298,7 @@
     <footer class="footer">
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: [P.IVA]</p>
+                <p>&copy; 2026 Legno Romano. Tutti i diritti riservati. | P.IVA: 17996051003</p>
                 <p style="font-size: 0.85em; margin-top: 8px; opacity: 0.9;">Lavori eseguiti secondo normativa vigente, con personale qualificato e assicurato.</p>
                 <p style="margin-top: 15px;">
                     <a href="https://www.iubenda.com/privacy-policy/14816223" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe" title="Privacy Policy">Privacy Policy</a>
