--- a/form-detection.html
+++ b/form-detection.html
@@ -3,6 +3,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16767084786"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16767084786');
+    </script>
     <title>Form Detection</title>
 </head>
 <body>
