--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             'send_to': 'AW-16767084786/Etg6CMDfxeYZEPLRlbs-',
             'event_callback': callback
         });
-        return false;
+        return true;
     }
     </script>
     <meta charset="UTF-8">
